# caffe-net-upgrade

./: CMakeLists.txt  README.md
src/: upgrade_caffe_layers.cpp
